force-app/main/default/objects/AssetWarranty__c/AssetWarranty__c.object-meta.xml
<CustomObject>
    <label>자산 워런티</label>
    <nameField>
        <label>Asset Warranty Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>