force-app/main/default/objects/AssetWarranty__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset ID</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Warranty</relationshipLabel>
    <relationshipName>Asset_Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>