force-app/main/default/objects/AssetWarranty__c/fields/ExpensesCovered__c.field-meta.xml
<CustomField>
    <fullName>ExpensesCovered__c</fullName>
    <label>Expenses Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>