force-app/main/default/objects/AssetWarranty__c/fields/ExpensesCoveredEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpensesCoveredEndDate__c</fullName>
    <label>Expenses Covered End Date</label>
    <type>Date</type>
</CustomField>