force-app/main/default/objects/AssetWarranty__c/fields/LaborCovered__c.field-meta.xml
<CustomField>
    <fullName>LaborCovered__c</fullName>
    <label>Labor Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>