force-app/main/default/objects/AssetWarranty__c/fields/LaborCoveredEndDate__c.field-meta.xml
<CustomField>
    <fullName>LaborCoveredEndDate__c</fullName>
    <label>Labor Covered End Date</label>
    <type>Date</type>
</CustomField>