force-app/main/default/objects/AssetWarranty__c/fields/PartsCoveredEndDate__c.field-meta.xml
<CustomField>
    <fullName>PartsCoveredEndDate__c</fullName>
    <label>Parts Covered End Date</label>
    <type>Date</type>
</CustomField>