force-app/main/default/objects/AssetWarranty__c/fields/PriceBookID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book ID</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Asset Warranty</relationshipLabel>
    <relationshipName>Asset_Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>