force-app/main/default/objects/AssetWarranty__c/fields/WarrantyTermID__c.field-meta.xml
<CustomField>
    <fullName>WarrantyTermID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Term ID</label>
    <referenceTo>WarrantyTerm__c</referenceTo>
    <relationshipLabel>Asset Warranty</relationshipLabel>
    <relationshipName>Asset_Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>